fixed AppBody from overflowing viewport height

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -4,6 +4,6 @@
     .main-content-container{
         display: flex;
         flex-direction: column;
-        flex: 1;
+        max-height: 100vh;
     }
 }
